<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    android:orientation="vertical"
    tools:context="com.example.ramonsl.quizexpressions.MainActivity">


    <!---TELA-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <!--questao1-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margem"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtQ1"
                    style="@style/question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/question_1" />

                <ImageView
                    android:id="@+id/imgQ1"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_help"
                    android:contentDescription="@string/app__pergunta"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/rgQ1"
                    style="@style/awnserG"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary">

                    <RadioButton
                        android:id="@+id/rgQ1a"
                        style="@style/awnser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question1_A" />

                    <RadioButton
                        android:id="@+id/rgQ1b"
                        style="@style/awnser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question1_B" />

                    <RadioButton
                        android:id="@+id/rgQ1c"
                        style="@style/awnser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/question1_C" />

                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
        <!---FIM questao1-->


        <!--- QUESTAO 2-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margem"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtQ2"
                    style="@style/question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/question_1" />

                <ImageView
                    android:id="@+id/imgQ2"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_help"
                    android:contentDescription="@string/app__pergunta"
                    />


            </LinearLayout>

            <RadioGroup
                android:id="@+id/rgQ2"
                style="@style/awnserG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <RadioButton
                    android:id="@+id/rgQ2a"
                    style="@style/awnser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1_A" />

                <RadioButton
                    android:id="@+id/rgQ2b"
                    style="@style/awnser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1_B" />

                <RadioButton
                    android:id="@+id/rgQ2c"
                    style="@style/awnser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1_C" />

            </RadioGroup>

        </LinearLayout>

        <!--fecha 02-->


        <!-- questao 3 -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margem"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtQ3"
                    style="@style/question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/question_5" />

                <ImageView
                    android:id="@+id/imgQ3"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_help"
                    android:contentDescription="@string/app__pergunta"
                    />


            </LinearLayout>


            <RadioGroup
                android:id="@+id/rgQ3"
                style="@style/awnserG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <CheckBox
                    android:id="@+id/cbxQa"
                    style="@style/awnser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1_A" />

                <CheckBox
                    android:id="@+id/cbxQb"
                    style="@style/awnser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1_B" />

                <CheckBox
                    android:id="@+id/cbxQc"
                    style="@style/awnser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1_C" />

            </RadioGroup>


        </LinearLayout>
        <!-- fim questão 3 -->>

        <!-- questão 4 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margem"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtQ4"
                    style="@style/question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/question_1" />

                <ImageView
                    android:id="@+id/imgQ4"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_help"
                    android:contentDescription="@string/app__pergunta"
                    />


            </LinearLayout>


            <RadioGroup
                style="@style/awnserG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <EditText
                    android:id="@+id/edQ04"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app__tradu"

                    android:textColor="@color/primary_light" />

            </RadioGroup>

        </LinearLayout>
        <!-- fim 4-->

        <!-- questão 5 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margem"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtQ5"
                    style="@style/question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/question_1" />

                <ImageView
                    android:id="@+id/imgQ5"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_help"
                    android:contentDescription="@string/app__pergunta"
                    />


            </LinearLayout>


            <RadioGroup
                style="@style/awnserG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <EditText

                    android:id="@+id/edQ05"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app__tradu"
                    android:textColor="@color/primary_light" />

            </RadioGroup>

        </LinearLayout>
        <!-- fim 5-->


        <!--botao fim-->
        <Button
            android:id="@+id/btnFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/app__enviar" />

    </LinearLayout>


    <!---FeCHA TELA-->
</ScrollView>
